saint-lascivious.github.io: preload fonts w/ crossorigin
add aria-label tags in footer

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/downloads.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/technologies.html
 - modified:   .formatted/test.html
 - modified:   .formatted/testsainternet.html
 - modified:   265.html
 - modified:   404.html
 - modified:   archive.html
 - modified:   connecttosainternet.html
 - modified:   debug.html
 - modified:   devdiary.html
 - modified:   downloads.html
 - modified:   filtereddns.html
 - modified:   frequentlyaskedquestions.html
 - modified:   index.html
 - modified:   newsandupdates.html
 - modified:   pokedexoverdns.html
 - modified:   portsandprotocols.html
 - modified:   projects.html
 - modified:   reportaproblem.html
 - modified:   technologies.html
 - modified:   test.html
 - modified:   testsainternet.html

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -68,11 +68,11 @@
     <link rel="preload" as="style" href="resources/stylesheets/img.min.css">
     <link rel="stylesheet" href="resources/stylesheets/img.min.css">
 
-    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/materialicons/v140/Material-Icons.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Bold.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2">
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/materialicons/v140/Material-Icons.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Bold.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Medium.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="resources/google/webfonts/roboto/v30/Roboto-Regular.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="resources/fontawesome-free-6.4.0-web/webfonts/fa-brands-400.woff2" crossorigin>
 
     <link rel="preload" as="style" href="resources/google/css/roboto.min.css">
     <link href="resources/google/css/roboto.min.css" rel="stylesheet">
@@ -172,7 +172,7 @@
               Welcome to Sainternet.
             </p>
             <p>
-              I'm saint (aka. Hayden Pearce), and I make (and break) things on the internet sometimes.
+              I'm saint (aka. Hayden Pearce), and I make (and more frequently break) things on the internet sometimes.
             </p>
             <p>
               This site is one of those things.
@@ -185,17 +185,17 @@
                 <source srcset="resources/images/wurmple.webp" type="image/webp">
                 <source srcset="resources/images/wurmple.png" type="image/png">
                 <source srcset="resources/images/wurmple.jpeg" type="image/jpeg">
-                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+                <img src="resources/images/wurmple.jpg" width="480" height="480" alt="The image supplied is not strictly illustrative, the author is not a Pokémon.">
               </picture>
               <picture class="dark-mode-img">
                 <source srcset="resources/images/wurmple-shiny.webp" type="image/webp">
                 <source srcset="resources/images/wurmple-shiny.png" type="image/png">
                 <source srcset="resources/images/wurmple-shiny.jpeg" type="image/jpeg">
-                <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="Image supplied not illustrative, the author is not a Pokémon.">
+                <img src="resources/images/wurmple-shiny.jpg" width="480" height="480" alt="The image supplied is not strictly illustrative, the author is not a Pokémon.">
               </picture>
             </div>
             <div class="mdl-tooltip mdl-tooltip--top" for="hero-image">
-              Image supplied not illustrative, the author is not a Pokémon.
+              The image supplied is not strictly illustrative, the author is not a Pokémon.
             </div>
           </div>
         </div>
@@ -204,7 +204,7 @@
       <div class="mdl-mini-footer--left-section">
         <ul class="mdl-mini-footer--link-list">
           <li>
-            <a href="mailto:saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
+            <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
@@ -212,7 +212,7 @@
             </a>
           </li>
           <li>
-            <a href="https://discord.gg/NC7taVyn" id="icon-discord">
+            <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
@@ -220,7 +220,7 @@
             </a>
           </li>
           <li>
-            <a href="https://github.com/saint-lascivious" id="icon-github">
+            <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
@@ -228,7 +228,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.reddit.com/user/saint-lascivious" id="icon-reddit">
+            <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
             <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
