saint-lascivious.github.io: seo fuckery, serviceworker v1.6
make mdl-tooltip "links" "crawlable"
(personally i think lighthouse is just plain wrong on this one)

Changes to be committed:
 - modified:   .formatted/265.html
 - modified:   .formatted/404.html
 - modified:   .formatted/archive.html
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/debug.html
 - modified:   .formatted/devdiary.html
 - modified:   .formatted/downloads.html
 - modified:   .formatted/filtereddns.html
 - modified:   .formatted/frequentlyaskedquestions.html
 - modified:   .formatted/index.html
 - modified:   .formatted/newsandupdates.html
 - modified:   .formatted/pokedexoverdns.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/projects.html
 - modified:   .formatted/reportaproblem.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   .formatted/technologies.html
 - modified:   .formatted/test.html
 - modified:   .formatted/testsainternet.html
 - modified:   serviceworker.min.js

--- a/.formatted/index.html
+++ b/.formatted/index.html
@@ -207,7 +207,7 @@
             <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
               Email
             </a>
           </li>
@@ -215,7 +215,7 @@
             <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
               Discord
             </a>
           </li>
@@ -223,7 +223,7 @@
             <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
               GitHub
             </a>
           </li>
@@ -231,7 +231,7 @@
             <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
               Reddit
             </a>
           </li>
