--- a/.formatted/testsainternet.html
+++ b/.formatted/testsainternet.html
@@ -364,7 +364,7 @@ Address: 2606:2800:220:1:248:1893:25c8:1946
             <a href="mailto:saint@sainternet.xyz" aria-label="Email me at saint@sainternet.xyz" target="_blank" rel="noopener noreferrer" id="icon-email">
               <icon class="enlift material-icons">email</icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-email">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-email">
               Email
             </a>
           </li>
@@ -372,7 +372,7 @@ Address: 2606:2800:220:1:248:1893:25c8:1946
             <a href="https://discord.gg/NC7taVyn" aria-label="Talk to me on Discord (probably not)" id="icon-discord">
               <icon class="enlift fa-brands fa-discord"></icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-discord">
               Discord
             </a>
           </li>
@@ -380,7 +380,7 @@ Address: 2606:2800:220:1:248:1893:25c8:1946
             <a href="https://github.com/saint-lascivious" aria-label="Check out my GitHub" id="icon-github">
               <icon class="enlift fa-brands fa-github"></icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-github">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-github">
               GitHub
             </a>
           </li>
@@ -388,7 +388,7 @@ Address: 2606:2800:220:1:248:1893:25c8:1946
             <a href="https://www.reddit.com/user/saint-lascivious" aria-label="Occasionally I do things on Reddit" id="icon-reddit">
               <icon class="enlift fa-brands fa-reddit"></icon>
             </a>
-            <a class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
+            <a href="#" class="mdl-tooltip mdl-tooltip--top" for="icon-reddit">
               Reddit
             </a>
           </li>
