saint-lascivious.github.io: safe.dns.sainternet.xyz, sw v1.7.1
Changes to be committed:
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   connecttosainternet.html
 - modified:   portsandprotocols.html
 - modified:   serviceworker.min.js

--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -204,6 +204,7 @@
               Notes:
             </p>
             <ul>
+              <li>Filtered DNS resolution with Safe Search enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
             </ul>
           </div>
@@ -291,6 +292,7 @@
               Notes:
             </p>
             <ul>
+              <li>Filtered DNS resolution with Safe Search enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
@@ -317,6 +319,7 @@
             </p>
             <ul>
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet<br>(Ignored if manually configured.)</li>
+              <li>Filtered DNS resolution with Safe Search enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
