--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -225,8 +225,9 @@
             <ul>
               <li>Hover or mouse-over encryption links to show sainternet DNS query paths.</li>
               <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
+              <li>Filtered DNS resolution with Safe Search enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
-              <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code> or <code>unfiltered.dns.sainternet.xyz</code> domains without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
+              <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code>, <code>safe.dns.sainternet.xyz</code> or <code>unfiltered.dns.sainternet.xyz</code> domains without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
             </ul>
             <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
               Unencrypted DNS
