--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -204,7 +204,7 @@
               Notes:
             </p>
             <ul>
-              <li>Filtered DNS resolution with Safe Search enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
+              <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
             </ul>
           </div>
@@ -292,7 +292,7 @@
               Notes:
             </p>
             <ul>
-              <li>Filtered DNS resolution with Safe Search enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
+              <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
@@ -319,7 +319,7 @@
             </p>
             <ul>
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet<br>(Ignored if manually configured.)</li>
-              <li>Filtered DNS resolution with Safe Search enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
+              <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
               <li>Unfiltered DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
