saint-lascivious.github.io: revert ad9b53d
Changes to be committed:
 - modified:   .formatted/portsandprotocols.html
 - modified:   portsandprotocols.html

--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -202,19 +202,19 @@
                   <th>Protocol<br>Port</th>
                 </tr>
                 <tr>
-                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink"><code>https://dns.sainternet.xyz/dns-query<br>https://safe.dns.sainternet.xyz/dns-query<br>https://unfiltered.dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink"><code>https://dns.sainternet.xyz/dns-query</code></a></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link"><code>h3://dns.sainternet.xyz/dns-query<br>h3://safe.dns.sainternet.xyz/dns-query<br>h3://unfiltered.dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link"><code>h3://dns.sainternet.xyz/dns-query</code></a></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink"><code>tls://dns.sainternet.xyz:853<br>tls://safe.dns.sainternet.xyz:853<br>tls://unfiltered.dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink"><code>tls://dns.sainternet.xyz:853</code></a></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink"><code>quic://dns.sainternet.xyz:853<br>quic://safe.dns.sainternet.xyz:853<br>quic://unfiltered.dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink"><code>quic://dns.sainternet.xyz:853</code></a></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
