saint-lascivious.github.io: portsandprotocols, serviceworker 1.8
Changes to be committed:
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   portsandprotocols.html
 - modified:   serviceworker.min.js

--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -202,19 +202,19 @@
                   <th>Protocol<br>Port</th>
                 </tr>
                 <tr>
-                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink"><code>https://dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttps"><a href="https://en.wikipedia.org/wiki/DNS_over_HTTPS" id="dnsoverhttpslink">HTTPS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttpslink">https://*.sainternet.xyz/dns-query</a></td>
                   <td>TCP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link"><code>h3://dns.sainternet.xyz/dns-query</code></a></td>
+                  <td id="dnsoverhttp3"><a href="https://en.wikipedia.org/wiki/HTTP/3" id="dnsoverhttp3link">HTTP/3</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverhttp3link">h3://*.sainternet.xyz/dns-query</a></td>
                   <td>UDP<br><code>443</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink"><code>tls://dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsovertls"><a href="https://en.wikipedia.org/wiki/DNS_over_TLS" id="dnsovertlslink">TLS</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsovertlslink">tls://*.sainternet.xyz:853</a></td>
                   <td>TCP<br><code>853</code></td>
                 </tr>
                 <tr>
-                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink"><code>quic://dns.sainternet.xyz:853</code></a></td>
+                  <td id="dnsoverquic"><a href="https://en.wikipedia.org/wiki/DNS_over_QUIC" id="dnsoverquiclink">QUIC</a><a href="#" class="mdl-tooltip mdl-tooltip--top" for="dnsoverquiclink">quic://*.sainternet.xyz:853</a></td>
                   <td>UDP<br><code>853</code></td>
                 </tr>
               </table>
@@ -223,10 +223,12 @@
               Notes:
             </p>
             <ul>
-              <li>Hover or mouse-over encryption links to show sainternet DNS query paths.</li>
-              <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
-              <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
-              <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
+              <li>Hover or mouse-over encryption links to show example sainternet DNS query paths.</li>
+              <ul>
+                <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
+                <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
+                <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
+              </ul>
               <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code>, <code>safe.dns.sainternet.xyz</code> or <code>unfiltered.dns.sainternet.xyz</code> domains without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
             </ul>
             <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
