saint-lascivious.github.io: portsandprotocols, detail domains
not exactly the right place, but, eh

Changes to be committed:
 - modified:   .formatted/connecttosainternet.html
 - modified:   .formatted/portsandprotocols.html
 - modified:   .formatted/serviceworker.min.js
 - modified:   connecttosainternet.html
 - modified:   portsandprotocols.html
 - modified:   serviceworker.min.js

--- a/.formatted/portsandprotocols.html
+++ b/.formatted/portsandprotocols.html
@@ -181,6 +181,12 @@
               Sainternet Filtered DNS is available over the following ports and protocols.
             </p>
             <ul>
+              <li><a href="portsandprotocols.html#domainsused" class="embiggen">Domains Used</a></li>
+              <ul>
+                <li><a href="portsandprotocols.html#dnssainternetxyz" class="embiggen">dns.sainternet.xyz</a></li>
+                <li><a href="portsandprotocols.html#safednssainternetxyz" class="embiggen">safe.dns.sainternet.xyz</a></li>
+                <li><a href="portsandprotocols.html#unfiltereddnssainternetxyz" class="embiggen">unfiltered.dns.sainternet.xyz</a></li>
+              </ul>
               <li><a href="portsandprotocols.html#encrypteddns" class="embiggen">Encrypted DNS</a></li>
               <ul>
                 <li><a href="portsandprotocols.html#dnsoverhttps" class="embiggen">HTTPS</a></li>
@@ -194,9 +200,38 @@
                 <li><a href="portsandprotocols.html#dnsoverudp" class="embiggen">UDP</a></li>
               </ul>
             </ul>
-            <p class="embiggen sainternet-subheader-centered" id="encrypteddns">
-              Encrypted DNS
-            </p>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="domainsused">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Domains Used</h3>
+            <div class="enlift rounded-corners shadow-boxing">
+              <table>
+                <tr>
+                  <th>Domain</th>
+                  <th>Description</th>
+                </tr>
+                <tr>
+                  <td id="dnssainternetxyz">dns.sainternet.xyz</td>
+                  <td>Filtered iterating, validating and caching nameserver.</td>
+                </tr>
+                <tr>
+                  <td id="safednssainternetxyz">safe.dns.sainternet.xyz</td>
+                  <td>Filtered iterating, validating and caching nameserver with Safe Search, adult content filtering and additional browser protection.</td>
+                </tr>
+                <tr>
+                  <td id="unfiltereddnssainternetxyz">unfiltered.dns.sainternet.xyz</td>
+                  <td>Unfiltered (mostly) iterating, validating and caching nameserver.</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="encrypteddns">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Encrypted DNS</h3>
             <div class="enlift rounded-corners shadow-boxing">
               <table>
                 <tr>
@@ -229,13 +264,16 @@
               <ul>
                 <li>Filtered DNS resolution is available via <code>dns.sainternet.xyz</code>.</li>
                 <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
-                <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
+                <li>Unfiltered (mostly) DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
               </ul>
               <li>For <a href="connecttosainternet.html#androidprivatedns">Android Private DNS</a> use just the <code>dns.sainternet.xyz</code>, <code>safe.dns.sainternet.xyz</code> or <code>unfiltered.dns.sainternet.xyz</code> domains without <code>proto://</code>, <code>/path</code> or <code>:port</code> sections.</li>
             </ul>
-            <p class="embiggen sainternet-subheader-centered" id="unencrypteddns">
-              Unencrypted DNS
-            </p>
+          </div>
+        </div>
+        <div class="sainternet-container mdl-grid" id="unencrypteddns">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="sainternet-content mdl-shadow--2dp content mdl-cell mdl-cell--8-col enlift">
+            <h3 class="embiggen">Unencrypted DNS</h3>
             <div class="enlift rounded-corners shadow-boxing">
               <table>
                 <tr>
