--- a/.formatted/connecttosainternet.html
+++ b/.formatted/connecttosainternet.html
@@ -205,7 +205,7 @@
             </p>
             <ul>
               <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>safe.dns.sainternet.xyz</code>.</li>
-              <li>Unfiltered DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
+              <li>Unfiltered (mostly) DNS resolution is available via <code>unfiltered.dns.sainternet.xyz</code>.</li>
             </ul>
           </div>
         </div>
@@ -293,7 +293,7 @@
             </p>
             <ul>
               <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
-              <li>Unfiltered DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
+              <li>Unfiltered (mostly) DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
         </div>
@@ -320,7 +320,7 @@
             <ul>
               <li>Sainternet intentionally disables Mozilla's <a href="https://support.mozilla.org/en-US/kb/configuring-networks-disable-dns-over-https">default DNS over HTTPS</a> to prevent it from bypassing Sainternet<br>(Ignored if manually configured.)</li>
               <li>Filtered DNS resolution with Safe Search, adult content filtering and additional browser protection enabled is available via <code>https://safe.dns.sainternet.xyz/dns-query</code>.</li>
-              <li>Unfiltered DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
+              <li>Unfiltered (mostly) DNS resolution is available via <code>https://unfiltered.dns.sainternet.xyz/dns-query</code>.</li>
             </ul>
           </div>
         </div>
